@@ -16,7 +16,7 @@
 [[0, 3], [3, -276], [3, 0]]
 [[0, 3], [3, 0], [19, 2], [27, 3]]
 [[-1, -1], [-1, 1], [1, -1], [1, 1]]
-[]
+[[0, 0]]
 [[0, 0]]
 [[0, 0]]
 [[-1, -1], [-1, 1], [1, -1], [1, 1]]
@@ -29,4 +29,16 @@
 [[0, 1]]
 [[-8, 6], [-2, -2], [-2, 0], [0, -2], [2, -2]]
 [[-2, -1], [-1, -2], [1, 2], [2, 1]]
-Total time spent: 2372
+[]
+[[-12100, 5500], [-12100, 6600], [-11000, 1100], [-11000, 9900], [-9900, -11
+00], [-9900, 11000], [-6600, -5500], [-6600, 12100], [-5500, -6600], [-5500,
+ 12100], [-1100, -9900], [-1100, 11000], [1100, -11000], [1100, 9900], [5500
+, -12100], [5500, 6600], [6600, -12100], [6600, 5500], [9900, -11000], [9900
+, 1100], [11000, -9900], [11000, -1100], [12100, -6600], [12100, -5500]]
+44
+44
+2
+2
+24
+6
+Total time spent: 2371
